Update styles for search and mod_table...   - Hide "out_link" on mobile view in search   - Fix searchbar sizing/align in all views on both pages.   - Use only _searchbar.scss to manage searchbar styling on both   - Use material icons "list" and "table_view" for their respective links.   - Fix table max height being calculated incorrectly. (Use grid instead of px values)

--- a/public/css/_items.scss
+++ b/public/css/_items.scss
@@ -157,6 +157,13 @@ li.item:hover .material-icons {
         & .desc {
             max-height: 100%;
         }
+
+        & .end_container {
+            display: block;
+            & > a {
+                display: none;
+            }
+        }
     }
 
     .item .start_container {
