--- a/public/css/mod_table.scss
+++ b/public/css/mod_table.scss
@@ -4,23 +4,27 @@
 
 /* Page structure */
 #page_container{
-    /* position:relative; */
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-    /* overflow: auto; */
+  /* position:relative; */
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
+  /* overflow: auto; */
   
-  }
+}
   #content_main {
     /* position: relative; */
     overflow: hidden;
-  
-    display: grid;
-    grid-template-rows: [main-start]100% [footer-start]256px[main-end];
   
   }
   #content_body {
     overflow: hidden;
     max-height: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: min-content auto;
+    justify-items: stretch;
+  }
+  #search_container {
+    grid-row: 1 / 2;
   }
   
   /* Results table */
@@ -35,12 +39,12 @@
       --grid-cols: minmax(16ch, 1fr) minmax(24ch, 2.75fr) repeat(5, minmax(16ch, 1fr));
       
       overflow-y: scroll;
-      max-height: calc(100% - var(--searchbar-total-height));
 
       & > thead, & > tbody {
         width: -moz-fit-content;
         min-width: 100%;
       }
+      grid-row: 2 / 3;
     }
     
     #search_results_list td, #search_results_list th {
@@ -181,56 +185,6 @@
     font-size: 12px;
   }
   
-  /* Searchbar */
-  
-  #content_body {
-      --searchbar-total-height: 58px;
-  }
-  #content_body .searchbar {
-    background-color: var(--color-element);
-    margin:8px;
-    height:42px;
-    width: 50%;
-    display:flex;
-    flex-direction:row;
-    justify-content:flex-start;
-    align-items: center;
-    
-    /*Does not work in js retrieval for some reason*/
-    --default-scale:0.95;
-    scale:var(--default-scale);
-  }
-  .searchbar * {
-    background-color: inherit;
-    border:none;
-    border-radius:4px;
-    outline:none;
-    
-    font-size:1.2em;
-    /*padding-top: 4px;/*1%;*/
-    /*padding-bottom:2px; /*.75%;*/
-  }
-  .searchbar:first-child {
-    margin-left: 10px;
-    margin-right: 10px;
-    display: block;
-  }
-  
-  .searchbar .dropdown {
-    justify-self:flex-end;
-  }
-  .searchbar .element {
-    margin-right:4px;
-  }
-  
-  .searchField {
-    padding-left:0px;
-    width:100%
-  }
-  input.searchField::placeholder {
-    color:var(--color-text);
-    opacity:0.6;
-  }
   .material-icons {
     margin:4px;
   }
